<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/layout">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
        <TextView
            android:text="@string/team_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />
        <TextView
            android:text="@string/team_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
        <TextView
            android:text="@string/nilaiA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nilaiA" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView" app:layout_constraintHorizontal_bias="0.636"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textSize="30sp"/>
        <TextView
            android:text="@string/nilaiB"
            android:layout_width="20dp"
            android:layout_height="39dp"
            android:id="@+id/nilaiB"
            app:layout_constraintStart_toStartOf="@+id/textView2" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"/>

        <Button
            android:id="@+id/bt_plus3A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="#FF9800"
            android:text="@string/_3_point"
            app:layout_constraintEnd_toEndOf="@+id/nilaiA"
            app:layout_constraintStart_toStartOf="@+id/nilaiA"
            app:layout_constraintTop_toBottomOf="@+id/nilaiA" />

        <Button
            android:id="@+id/bt_plus2A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#FF9800"
            android:text="@string/_2_point"
            app:layout_constraintEnd_toEndOf="@+id/bt_plus3A"
            app:layout_constraintStart_toStartOf="@+id/bt_plus3A"
            app:layout_constraintTop_toBottomOf="@+id/bt_plus3A" />

        <Button
            android:id="@+id/bt_freethrowA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#FF9800"
            android:text="@string/free_throw"
            app:layout_constraintEnd_toEndOf="@+id/bt_plus2A"
            app:layout_constraintStart_toStartOf="@+id/bt_plus2A"
            app:layout_constraintTop_toBottomOf="@+id/bt_plus2A" />

        <Button
            android:id="@+id/bt_plus3B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="#FF9800"
            android:text="@string/_3_point"
            app:layout_constraintEnd_toEndOf="@+id/nilaiB"
            app:layout_constraintStart_toStartOf="@+id/nilaiB"
            app:layout_constraintTop_toBottomOf="@+id/nilaiB" />

        <Button
            android:id="@+id/bt_plus2B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#FF9800"
            android:text="@string/_2_point"
            app:layout_constraintEnd_toEndOf="@+id/bt_plus3B"
            app:layout_constraintStart_toStartOf="@+id/bt_plus3B"
            app:layout_constraintTop_toBottomOf="@+id/bt_plus3B" />

        <Button
            android:id="@+id/bt_freethrowB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#FF9800"
            android:text="@string/free_throw"
            app:layout_constraintEnd_toEndOf="@+id/bt_plus2B"
            app:layout_constraintStart_toStartOf="@+id/bt_plus2B"
            app:layout_constraintTop_toBottomOf="@+id/bt_plus2B" />

        <Button
            android:id="@+id/bt_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="#FF9800"
            android:text="@string/reset"
            app:layout_constraintEnd_toEndOf="@+id/bt_freethrowB"
            app:layout_constraintStart_toStartOf="@+id/bt_freethrowA"
            app:layout_constraintTop_toBottomOf="@+id/bt_freethrowB" />

        <Button
            android:id="@+id/bt_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="#FF9800"
            android:text="@string/result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_reset" />

        <TextView
            android:id="@+id/t_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_result" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>